<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/listOfWorkouts"
            android:icon="@drawable/ic_baseline_format_list_bulleted_24"
            android:title="@string/list_of_workouts" />
        <item
            android:id="@+id/statistic"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/statistic" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/author"
            android:icon="@drawable/ic_baseline_mail_outline_24"
            android:title="@string/author" />
    </group>
</menu>