<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_user_info">

    <TextView
        android:id="@+id/tv_fill_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/danger"
        android:text="@string/fill_information"
        android:textAlignment="center"
        android:textColor="@color/main_text_color"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/et_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:ems="6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fill_information"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:ignore="RtlSymmetry" />
    <ImageView
        style="@style/LineStyle"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:src="@drawable/edit_text_line"
        app:layout_constraintTop_toTopOf="@id/et_user_name"
        app:layout_constraintStart_toStartOf="@id/et_user_name"
        app:layout_constraintEnd_toEndOf="@id/et_user_name"
        />
    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/et_user_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:layout_marginEnd="16dp"
        android:ems="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_user_name"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="RtlSymmetry,TextFields" />
    <ImageView
        style="@style/LineStyle"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:src="@drawable/edit_text_line"
        app:layout_constraintTop_toTopOf="@id/et_user_weight"
        app:layout_constraintStart_toStartOf="@id/et_user_weight"
        app:layout_constraintEnd_toEndOf="@id/et_user_weight"
        />
    <Spinner
        android:id="@+id/spinner_sex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/sex"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:paddingStart="20dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edit_text_shape"
        app:layout_constraintTop_toBottomOf="@id/et_user_name"
        app:layout_constraintStart_toStartOf="@id/et_user_name"
        app:layout_constraintEnd_toEndOf="@id/et_user_name"
        tools:ignore="RtlSymmetry" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_drop_down_36"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toTopOf="@id/spinner_sex"
        app:layout_constraintEnd_toEndOf="@id/spinner_sex"/>
    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/et_user_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/height"
        android:layout_marginEnd="16dp"
        android:ems="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/spinner_sex"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="RtlSymmetry,TextFields" />
    <ImageView
        style="@style/LineStyle"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:src="@drawable/edit_text_line"
        app:layout_constraintTop_toTopOf="@id/et_user_height"
        app:layout_constraintStart_toStartOf="@id/et_user_height"
        app:layout_constraintEnd_toEndOf="@id/et_user_height"
        />
    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/et_user_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:layout_marginEnd="16dp"
        android:ems="3"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_sex"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="RtlSymmetry,TextFields" />
    <ImageView
        style="@style/LineStyle"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:src="@drawable/edit_text_line"
        app:layout_constraintTop_toTopOf="@id/et_user_age"
        app:layout_constraintStart_toStartOf="@id/et_user_age"
        app:layout_constraintEnd_toEndOf="@id/et_user_age"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_continue"
        android:fontFamily="@font/danger"
        android:textSize="28sp"
        android:background="@drawable/continue_button_shape"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginBottom="66dp"
        android:textColor="@color/main_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>